[FIX] swagger
